polygons.active has bad default #39550

Closed
opened 2014-04-01 15:54:13 +02:00 by Atomic · 8 comments

System Information
Windows 7 64bit
nVidia 460gtx

Blender Version
Broken: 2.7 official release
Worked: (optional)

Short description of error
polygons.active has bad default

Exact steps for others to reproduce the error
I am writing a script where I want to use an active polygon as a starting point. This is the face index. When no polygon is active the API returns 0 as documented, however, this is a bad default because there is no way to determine if the first face in a mesh is active or not such as the case with a plane.

You may perceive this as a feature request but I suggest that when no faces are active that polygons.active returns -1. This way a scripter can actually determine if any faces are active.

**System Information** Windows 7 64bit nVidia 460gtx **Blender Version** Broken: 2.7 official release Worked: (optional) **Short description of error** polygons.active has bad default **Exact steps for others to reproduce the error** I am writing a script where I want to use an active polygon as a starting point. This is the face index. When no polygon is active the API returns 0 as documented, however, this is a bad default because there is no way to determine if the first face in a mesh is active or not such as the case with a plane. You may perceive this as a feature request but I suggest that when no faces are active that polygons.active returns -1. This way a scripter can actually determine if any faces are active.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AtomP

Added subscriber: @AtomP

Added subscriber: @mont29

Added subscriber: @mont29
Campbell Barton was assigned by Bastien Montagne 2014-04-01 16:26:43 +02:00

Suggestion makes sense to me, Campbell, what do you think?

Suggestion makes sense to me, Campbell, what do you think?

This issue was referenced by blender/blender-addons-contrib@747ba571a1

This issue was referenced by blender/blender-addons-contrib@747ba571a19f3adc46211e80184dde3fd6d336eb

This issue was referenced by 747ba571a1

This issue was referenced by 747ba571a19f3adc46211e80184dde3fd6d336eb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 747ba571a1.

Closed by commit 747ba571a1.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39550
No description provided.