Fix T39550: polygons.active has bad default